update pagination projectpartlist through ajax

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -202,6 +202,7 @@
       <!-- App body starts -->
       <div class="app-body">
         <router-outlet></router-outlet>
+        <app-project-partlist-price-request></app-project-partlist-price-request>
         <!-- Container starts -->
         <!-- <div class="container-fluid">
                     <ng-template #viewcomponent></ng-template>
