--- a/src/app/components/project-partlist-price-request/project-partlist-price-request.component.css
+++ b/src/app/components/project-partlist-price-request/project-partlist-price-request.component.css
@@ -40,4 +40,19 @@
   white-space: nowrap !important;
 }
 
+.btn {
+  height: 2.5vh;
+  font-size: 0.75rem;
+  border: none;
+}
+.tabulator {
+  font-size: 0.75rem;
+}
 
+.tabulator-cell {
+  padding: 0px;
+}
+
+.fs-12 {
+  font-size: 0.75rem;
+}
