update: update, fix giao dien

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,7 +176,8 @@
             <!-- App body starts -->
             <div class="app-body">
 
-                <!-- Container starts -->
+                <router-outlet></router-outlet>
+                <!-- Container starts
                 <div class="container-fluid">
                    
                     <div id="example-table"></div>
@@ -184,7 +185,7 @@
                     <ng-template #viewcomponent></ng-template>
                     
 
-                </div>
+                </div> -->
                 <!-- Container ends -->
 
             </div>
