--- a/src/app/components/VPP/OfficeSupplies/office-supplies.component.html
+++ b/src/app/components/VPP/OfficeSupplies/office-supplies.component.html
@@ -246,8 +246,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Đóng</button>
-        <button type="button" class="btn btn-outline-primary" (click)="addNewUnit()">Lưu</button>
+        <button style="height: auto;" type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Đóng</button>
+        <button style="height: auto;" type="button" class="btn btn-outline-primary" (click)="addNewUnit()">Lưu</button>
       </div>
     </div>
   </div>
