Update QuotePrice, exportExcel

--- a/src/app/components/project-partlist-price-request/project-partlist-price-request.component.html
+++ b/src/app/components/project-partlist-price-request/project-partlist-price-request.component.html
@@ -163,13 +163,13 @@
           <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="QuotePrice(0)">
             <i class="fa-solid fa-circle-exclamation"></i>Hủy hoàn thành
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="QuotePrice()">
+          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="onDeleteClick()">
             <i class="fa-solid fa-trash"></i>Xóa
           </button>
           <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="QuotePrice()">
             <i class="fa-solid fa-boxes-packing"></i>Thêm nhà cung cấp
           </button>
-          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="QuotePrice()">
+          <button class="btn btn-outline-secondary p-0 ps-2 pe-2" (click)="exportToExcelAdvanced()">
             <i class="fa-solid fa-table"></i>Xuất excel
           </button>
       </div>
